Fix errors in display on Firefox and Chrome

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
-        font-family: Raleway Thin
-        src: url('fonts/Raleway-Thin.ttf') format('ttf');
+        font-family: Raleway Thin;
+        src: url('fonts/Raleway-Thin.ttf');
 }
 
 /* General styles */
